Fixed TOC jump

--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,7 @@ h3,
 h4,
 h5,
 h6 {
-	@apply mt-8 mb-1;
+	@apply pt-12 pb-1;
 }
 
 .page > p > h1:first-of-type {
